@@ -23,8 +23,6 @@
 package de.metas.impexp.parser;
 
 import org.apache.commons.io.FileUtils;
-import org.assertj.core.api.Assertions;
-import org.junit.Assert;
 import org.junit.jupiter.api.Test;
 
 import java.io.File;
@@ -35,10 +33,7 @@ import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.List;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
+import static org.assertj.core.api.Assertions.assertThat;
 
 public class FileImportReaderTest
 {
@@ -48,20 +43,23 @@ public class FileImportReaderTest
 	public void testMultipleLinesFieldFile() throws IOException
 	{
 		final URL url = getClass().getResource(packagePath + "/multiplelines.csv");
-		Assert.assertNotNull("url null", url);
+		assertThat(url).as("url null").isNotNull();
 		final File file = FileUtils.toFile(url);
-		Assert.assertNotNull("file null", file);
+		assertThat(file).as("file null").isNotNull();
 
 		//
 		final Charset charset = StandardCharsets.UTF_8;
 		final List<String> lines = FileImportReader.readMultiLines(file, charset);
 
-		Assert.assertNotNull("lines null", lines);
-		Assert.assertFalse(lines.isEmpty());
-		Assert.assertEquals(2, lines.size());
-		lines.forEach(l -> Assert.assertTrue(l.startsWith("G00")));
-		Assert.assertTrue(lines.getFirst().endsWith("70"));
-		Assert.assertTrue(lines.get(1).endsWith("80"));
+		assertThat(lines)
+			.as("lines null")
+			.isNotNull()
+			.isNotEmpty()
+			.hasSize(2);
+		
+		lines.forEach(l -> assertThat(l).startsWith("G00"));
+		assertThat(lines.getFirst()).endsWith("70");
+		assertThat(lines.get(1)).endsWith("80");
 	}
 
 	@Test
@@ -69,29 +67,30 @@ public class FileImportReaderTest
 	{
 		final URL url = getClass().getResource(packagePath + "/OnlyAppendIfInQuotesPreserveFirstLine.csv");
 		System.out.println(url);
-		assertNotNull("url null", url);
+		assertThat(url).as("url null").isNotNull();
 		final File file = FileUtils.toFile(url);
-		assertNotNull("file null", file);
+		assertThat(file).as("file null").isNotNull();
 
 		//
 		final Charset charset = StandardCharsets.UTF_8;
 		final List<String> lines = FileImportReader.readMultiLines(file, charset);
 
-		assertNotNull("lines null", lines);
-		assertFalse(lines.isEmpty());
-		assertEquals(5, lines.size());
+		assertThat(lines)
+			.as("lines null")
+			.isNotNull()
+			.isNotEmpty()
+			.hasSize(5);
 
 		// todo
-		assertEquals("Buchungsdatum;Valuta;Buchungstext;Details;Detail;Belastung;Gutschrift;Saldo CHF", lines.getFirst());
-		assertEquals("Umsatztotal;;;;;4420;2210;", lines.get(1));
-		assertEquals("""
+		assertThat(lines.get(0)).isEqualTo("Buchungsdatum;Valuta;Buchungstext;Details;Detail;Belastung;Gutschrift;Saldo CHF");
+		assertThat(lines.get(1)).isEqualTo("Umsatztotal;;;;;4420;2210;");
+		assertThat(lines.get(2)).isEqualTo("""
 				11.01.1111;11.01.1111;aaaaaaaaaaaaaaaaaaa;"aaaaaaa
 				aaaaaaaaaaaaaaaa
 				aaaaaaaaaaaaa
-				aaaaa aaaaaaaaaaaaaaaaaaaa aaaa";;2210;;\
-				""", lines.get(2));
+				aaaaa aaaaaaaaaaaaaaaaaaaa aaaa";;2210;;""");
 
-		assertEquals("""
+		assertThat(lines.get(3)).isEqualTo("""
 				22.02.2222;22.02.2222;bbbbbbbbb bbbbbbbbb; "bbbbbbbb
 				bbbbbbbbbbbbbbbbb b
 				bbbb
@@ -100,28 +99,27 @@ public class FileImportReaderTest
 				bbbbbbbbbbbbbbbbbbbbbbbbbbbb
 				bbbbbbbbbbb.bb bb
 				bbbbbbbbbbbbbbbbbbbb";;;2210;\
-				""", lines.get(3));
+				""");
 
-		assertEquals("""
+		assertThat(lines.get(4)).isEqualTo("""
 				33.03.3333;33.03.3333;cccccccccccccc;"cccccccccccccccccc
 				cccccc c cccccccc  cc";;2210;;\
-				""", lines.get(4));
-
+				""");
 	}
 
 	@Test
 	public void multilineFile_NumberOfEmptyLinesIsPreserved() throws IOException
 	{
 		final URL url = getClass().getResource(packagePath + "/NumberOfEmptyLinesIsPreserved.csv");
-		assertNotNull("url null", url);
+		assertThat(url).as("url null").isNotNull();
 		final File file = FileUtils.toFile(url);
-		assertNotNull("file null", file);
+		assertThat(file).as("file null").isNotNull();
 
 		//
 		final Charset charset = StandardCharsets.UTF_8;
 		final List<String> lines = FileImportReader.readMultiLines(file, charset);
 
-		Assertions.assertThat(lines)
+		assertThat(lines)
 				.isNotEmpty()
 				.isNotNull()
 				.hasSize(15)
@@ -166,15 +164,15 @@ public class FileImportReaderTest
 	{
 		final URL url = getClass().getResource(packagePath + "/evenNumberOfQuotes.csv");
 		System.out.println(url);
-		assertNotNull("url null", url);
+		assertThat(url).as("url null").isNotNull();
 		final File file = FileUtils.toFile(url);
-		assertNotNull("file null", file);
+		assertThat(file).as("file null").isNotNull();
 
 		//
 		final Charset charset = StandardCharsets.UTF_8;
 		final List<String> lines = FileImportReader.readMultiLines(file, charset);
 
-		Assertions.assertThat(lines)
+		assertThat(lines)
 				.isNotNull()
 				.isNotEmpty()
 				.hasSize(8)
@@ -213,19 +211,22 @@ public class FileImportReaderTest
 	public void testRegularLinesFieldFile() throws IOException
 	{
 		final URL url = getClass().getResource(packagePath + "/regularlines.csv");
-		assertNotNull("url null", url);
+		assertThat(url).as("url null").isNotNull();
 		final File file = FileUtils.toFile(url);
-		assertNotNull("file null", file);
+		assertThat(file).as("file null").isNotNull();
 
 		final Charset charset = StandardCharsets.UTF_8;
 		final List<String> lines = FileImportReader.readRegularLines(file, charset);
 
-		assertNotNull("lines null", lines);
-		assertFalse(lines.isEmpty());
-		assertEquals(3, lines.size());
-		lines.forEach(l -> assertTrue(l.startsWith("G00")));
-		assertTrue(lines.getFirst().endsWith("80"));
-		assertTrue(lines.get(1).endsWith("90"));
-		assertTrue(lines.get(2).endsWith("100"));
+		assertThat(lines)
+			.as("lines null")
+			.isNotNull()
+			.isNotEmpty()
+			.hasSize(3);
+			
+		lines.forEach(l -> assertThat(l).startsWith("G00"));
+		assertThat(lines.getFirst()).endsWith("80");
+		assertThat(lines.get(1)).endsWith("90");
+		assertThat(lines.get(2)).endsWith("100");
 	}
 }
